[package]
name = "micromouse"
version = "0.1.0"
edition = "2021"

[lib]
name = "micromouse"
path = "src/lib.rs"

[[bin]]
name = "micromouse"
path = "src/main.rs"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1.0.0", optional = true }
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium", "rtic"] }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { version = "0.7.7", optional = true }
cortex-m-rt = { version = "0.7.5", optional = true }
panic-halt = { version = "1.0.0", optional = true }
nb = { version = "1.1.0", optional = true }
stm32f1xx-hal = { version = "0.11.0", features = ["stm32f103", "medium", "rtic"], optional = true}

[features]
default = []
stm32 = [
    "dep:embedded-hal",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:panic-halt",
    "dep:nb",
    "dep:stm32f1xx-hal",
]
# we can only use "dep:" on dependencies that are explicitly marked with optional = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
